// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`changing PK column type [postgres] (GH 1480) > changing PK type > 0. create schema with text PK 1`] = `
{
  "down": "drop table if exists "user" cascade;
",
  "up": "create table "user" ("id" varchar(255) not null, primary key ("id"));
",
}
`;

exports[`changing PK column type [postgres] (GH 1480) > changing PK type > 1. change PK type from text to int 1`] = `
{
  "down": "alter table "user" alter column "id" type varchar(255) using ("id"::varchar(255));
",
  "up": "alter table "user" alter column "id" type int using ("id"::int);
",
}
`;

exports[`changing PK column type [postgres] (GH 1480) > changing PK type > 2. add new PK (make it composite PK) 1`] = `
{
  "down": "alter table "user" drop constraint "user_pkey";
alter table "user" drop column "id2";
alter table "user" add primary key ("id");
",
  "up": "alter table "user" drop constraint "user_pkey";
alter table "user" add "id2" int not null;
alter table "user" add primary key ("id", "id2");
",
}
`;

exports[`changing PK column type [postgres] (GH 1480) > changing PK type > 3. remove old PK (make it single PK again) 1`] = `
{
  "down": "alter table "user" drop constraint "user_pkey";
alter table "user" add "id2" int4 not null;
alter table "user" add primary key ("id", "id2");
",
  "up": "alter table "user" drop constraint "user_pkey";
alter table "user" drop column "id2";
alter table "user" add primary key ("id");
",
}
`;

exports[`changing PK column type [postgres] (GH 1480) > changing PK type > 4. change PK type from int to serial 1`] = `
{
  "down": "alter table "user" alter column "id" drop default;
",
  "up": "create sequence if not exists "user_id_seq";
select setval('user_id_seq', (select max("id") from "user"));
alter table "user" alter column "id" set default nextval('user_id_seq');
",
}
`;

exports[`changing PK column type [postgres] (GH 1480) > changing PK type > 5. change PK type from serial to text 1`] = `
{
  "down": "alter table "user" alter column "id" type text using ("id"::text);

alter table "user" alter column "id" type int4 using ("id"::int4);

create sequence if not exists "user_id_seq";
select setval('user_id_seq', (select max("id") from "user"));
alter table "user" alter column "id" set default nextval('user_id_seq');
",
  "up": "alter table "user" alter column "id" drop default;

alter table "user" alter column "id" type uuid using ("id"::text::uuid);
",
}
`;
